# doxed

./: Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml
doxed/: Cargo.toml  README.md
doxed-derive/: Cargo.toml  README.md
doxed-derive/src/: lib.rs
doxed/src/: lib.rs
